Building Our Recipes List

--- a/client/recipes/Recipes.html
+++ b/client/recipes/Recipes.html
@@ -1,5 +1,13 @@
 <template name="Recipes">
 
     {{> NewRecipe}}
+    <section class="recipes">
+        {{#each recipes}}
+
+        {{> Recipe}}
+
+        {{/each}}
+
+    </section>
 
 </template>
