--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -8,6 +8,7 @@
                 <span class="ingredient">{{name}} - {{amount}}</span>
             {{/each}}
         </p>
+        <a href="/recipe/{{_id}}">View Details</a>
     </article>
 
 </template>
