--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -9,6 +9,8 @@
             {{/each}}
         </p>
         <a href="/recipe/{{_id}}">View Details</a>
+        <button class="btn-primary toggle-menu">Add to Menu</button>
+        <button class="btn-deny toggle-menu">Remove from Menu</button>
     </article>
 
 </template>
