--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -9,8 +9,12 @@
             {{/each}}
         </p>
         <a href="/recipe/{{_id}}">View Details</a>
-        <button class="btn-primary toggle-menu">Add to Menu</button>
+        <p></p>
+        {{#if inMenu}}
         <button class="btn-deny toggle-menu">Remove from Menu</button>
+        {{else}}
+        <button class="btn-primary toggle-menu">Add to Menu</button>
+        {{/if}}
     </article>
 
 </template>
